Added home page html and styling.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,9 +14,30 @@
 <body>
  <div class="container">
   <div class="page-header">
-   <h1>Dungeons and Dragons and Dates</h1>
+   <div class="row">
+    <div class="col-sm-12 col-md-8" id="page-head-text">
+     <h1 id="page-head-text-title">Dungeons and Dragons and Dates</h1>   
+     <p id="page-head-subtext">A role-playing dating game</p>
+    </div>
+   </div>
   </div>  
+  <div class="col-sm-12 col-md-10" id="home-body">
+   <div class="row">
+    <p id="home-text">
+     Welcome, traveler! In all the realms, I've never seen a lonelier face.
+     If you're interested, I can furnish you a questionaire that will match you with 
+     adventurers with similar sensibilities. Click the button below to begin!
+    </p>
+    <a href="/survey" class="btn btn-default" id="survey-button">Begin Survey</a>
+   </div>   
+  </div>
+  <div class="row">
+   <div class="col-4">
+    <a href="/api/friends"   
+   </div>   
+  </div>
  </div>
+  
  
 
 
